Added Background Image Option

--- a/style.css
+++ b/style.css
@@ -55,3 +55,11 @@ canvas {
   width: 30px;
   margin: 2px;
 }
+
+#img_button{
+  background-color:	#1E90FF;
+  height: 40px;
+  width: 70px;
+  margin: 2px;
+}
+
